tools:gtlssh: Fix memory handling of keyfile, certfile, add CAdir
The memory handling of keyfile and certfile were inconsistent, in some
places they were allocated and in others they were not.  Make it always
allocated.

Add a --cadir option to allow the cadir to be overridden.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/tools/gtlssh.1
+++ b/tools/gtlssh.1
@@ -27,7 +27,11 @@ this, the certfile will be the same name ending in .crt, unless you
 specify it explicitly.
 .TP
 .I \-\-certfile file
-Set the certificate to use
+Set the certificate to use.
+.TP
+.I \-\-cadir directory
+Set the directory that holds the certificate authority used to authenticate
+the server.
 .TP
 .I \-e|\-\-escchar char
 Specify a character to use for the escape character.  Setting it to
