gtlssh: Add an option to turn off interactive login
Useful for remote logins from programs, if authentication fails it just
termiates the connection.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/tools/gtlsshd.8
+++ b/tools/gtlsshd.8
@@ -73,6 +73,10 @@ received.  This allows easier debugging of the program.
 .I \-\-nodaemon
 Do not daemonize (double fork) the program.
 .TP
+.I \-\-nointeractive
+Disable interactive logins.  All authentication information must be passed
+in via the protocol.
+.TP
 .I \-\-nosctp
 Disable SCTP support.
 .TP
