tools:gtlssh-keygen: Add support for elliptic curves
Add a way to specify the key algorithm and add support for EC.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/tools/gtlssh-keygen.1
+++ b/tools/gtlssh-keygen.1
@@ -83,6 +83,10 @@ Set the common name in the certificate.  The default is your username
 for normal certificates and the fully qualified domain name for server
 certificates.
 .TP
+.I \-\-algorithm algname
+Use the given algorithm for the key generation, one of rsa or ec.  The
+default is rsa.
+.TP
 .I \-\-force | \-f
 Don't ask any questions, just force the operations.  Be careful, this
 will overwrite data without asking.
