--- a/tools/gensiot.1
+++ b/tools/gensiot.1
@@ -6,7 +6,7 @@ gensio \- Tool for doing gensio connections
 .SH SYNOPSIS
 .B gensiotool
 [\-i|\-\-input io1] [\-d|\-\-debug] [\-a|\-\-accepter] [\-\-signature <sig>]
-[\-e|\-\-escchar char] [\-p|\-\-printacc] [\-h|\-\-help]
+[\-e|\-\-escchar char] [\-p|\-\-printacc] [\-\-fork] [\-h|\-\-help]
 io2
 
 .SH DESCRIPTION
@@ -61,6 +61,11 @@ on io1.
 If
 .I -a
 is specified, print out all the accept addresses chosen by the program.
+.TP
+.I \-\-fork
+When an accept happens, fork off to handle that connection, and keep
+accepting in the parent.  The default is to shut down the accepter and
+handle the connection in the main program.
 .TP
 .I \-h|\-\-help
 Help output
