tools:gensiot: Add multi-threading support
Add the ability to spawn more than one thread in gensiot.  Add the
appropriate locking and the spawning of threads if asked for.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/tools/gensiot.1
+++ b/tools/gensiot.1
@@ -62,6 +62,11 @@ If
 .I -a
 is specified, print out all the accept addresses chosen by the program.
 .TP
+.I \-n|\-\-extra\-threads <n>
+Spawn <n> extra threads to handle gensio operations.  Useful for
+scalabiity with
+.I \-\-server.
+.TP
 .I \-\-server
 When an accept happens, don't disable accept, but continue to accept
 connections, and won't close if all the connections go away..  If this
