--- a/man/gensio.5
+++ b/man/gensio.5
@@ -606,14 +606,16 @@ use locking.  This is not available as a default.
 .B drain_time=off|<time in 100ths of a second>
 The total amount of time to wait for the data to be sent on the serial
 port at close time.  Close will be delayed this amount of time, or
-until all the data is transmitted.  Default is off.
+until all the data is transmitted.  Default is off.  When setting the
+default value for this, "off" will not be accepted, use -1 instead.
 .TP
 .B char_drain_wait=off|<time in 100ths of a second>
 At close time, if this much time elapses and no character is sent,
 finish the close.  Default is 50 (.5 seconds).  Note that if both this and
 .B drain_time
 are off, if the serial port is hung on flow control, it will never
-close.
+close.  When setting the default value for this, "off" will not be
+accepted, use -1 instead.
 .PP
 There are a plethora of serialoptions, available as defaults:
 .TP
