--- a/man/gensio_mdns.3
+++ b/man/gensio_mdns.3
@@ -137,7 +137,7 @@ reported in the future, but those will have been dynamically added
 later.
 .PP
 In the watch callback, you must make copies of all the strings and
-addresses passed to you to keep them.  Their continued existance is
+addresses passed to you to keep them.  Their continued existence is
 not guaranteed.
 
 In watches, all of the string fields may be NULL, meaning you want to
