--- a/man/sergensio_b_alloc.3
+++ b/man/sergensio_b_alloc.3
@@ -46,7 +46,7 @@ int sergensio_datasize_b(struct sergensio_b *sbio,
 .TP 20
 .B int sergensio_ri_b(struct sergensio_b *sbio, unsigned int *ri);
 .SH "DESCRIPTION"
-These are equvalent to the non-blocking functions (without the _b),
+These are equivalent to the non-blocking functions (without the _b),
 but block waiting for the results.  Like all synchronous I/O, this can
 come with deadlock potential, so these should be used carefully.
 
