--- a/man/sergensio_event.3
+++ b/man/sergensio_event.3
@@ -56,7 +56,7 @@ user.
 
 On the client side, these are reporting current modemstate and
 linestate changes as an unsigned integer.  See sergensio_modemstate(3)
-and sergensio_linestate(3) for a meaning of the bits in the interger.
+and sergensio_linestate(3) for a meaning of the bits in the integer.
 
 GENSIO_EVENT_SER_MODEMSTATE
 .br
