--- a/tools/gtlssh-keygen.1
+++ b/tools/gtlssh-keygen.1
@@ -133,7 +133,7 @@ used.  If the destination file already exists, it will rename it
 Put the local certificate for the given host onto the remote host so
 it can be used for login.  It uses old credentials (credentials
 with .1 appended to the name, per keygen) if they are there.  This is
-useful if you have upated your certificate and need to send a new one
+useful if you have updated your certificate and need to send a new one
 to some remote hosts.  It finds the certificate name as described in
 the keygen command.  If old credentials exist, it will use those to
 connect with gtlssh and send the certificate.  Otherwise it will use
