--- a/tools/gtlssh.1
+++ b/tools/gtlssh.1
@@ -116,7 +116,7 @@ Help output
 After connecting, the host is first validated using standard SSL.  The
 keys used for validation are in $HOME/.gtlssh/server_certs by default.
 If the given key is not recognized, the user is prompted with the
-certificate fingerprint asking if the user wants to acccept the
+certificate fingerprint asking if the user wants to accept the
 certificate.
 
 If the user accepts the certificate, then it is added into the default
