--- a/man/gensio_open.3
+++ b/man/gensio_open.3
@@ -22,7 +22,7 @@ gensio_open, gensio_open_s, gensio_open_nochild, gensio_open_nochild_s
 int gensio_open_nochild_s(struct gensio *io);
 .SH "DESCRIPTION"
 .B gensio_open
-starts the gensio.  gensios recevied from an accepter are
+starts the gensio.  gensios received from an accepter are
 open upon receipt, but connecting gensios are started closed and need
 to be opened before use.  If no error is returned, the
 .I open_done
