man: Use gensio.h, not gensio_os_funcs.h, for log handling
Moved it to a more logical location.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/man/gensio_set_log_mask.3
+++ b/man/gensio_set_log_mask.3
@@ -3,7 +3,7 @@
 gensio_set_log_mask, gensio_get_log_mask, gensio_log_level_to_str,
 \- Logging and seting which gensio logs are passed or ignored
 .SH SYNOPSIS
-.B #include <gensio/gensio_os_funcs.h>
+.B #include <gensio/gensio.h>
 .TP 20
 .B void gensio_set_log_mask(unsigned int mask);
 .PP
